--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
                   , "monitoring"]
 , "homepage"    : "https://github.com/lleo/node-stats"
 , "repository"  : { "type": "git"
-                  , "url" : "https://github.com/lleo/node-stats.git"}
+                  , "url" : "https://github.com/lleo/node-stats.git" }
 , "bugs"        : { "url": "https://github.com/lleo/node-stats/issues"
                   , "email": "lleoem@gmail.com" }
 , "dependencies": { "printf"    : ">=0.0.4"
-                    "underscore": ">=1.3.3" }
+                  , "underscore": ">=1.3.3" }
 , "devDependencies": {}
 , "engines" : {"node" : ">= 0.4.0"}
 }
