--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"        : "stats"
-, "main"        : "./lib/stats.js"
+, "main"        : "lib/stats.js"
 , "version"     : "0.1.0"
 , "description" : "A module for collecting internal application statistics"
 , "keywords"    : ["performance", "stats", "statistics", "monitor"
@@ -10,8 +10,9 @@
                   , "url" : "https://github.com/lleo/node-stats.git" }
 , "bugs"        : { "url": "https://github.com/lleo/node-stats/issues"
                   , "email": "lleoem@gmail.com" }
-, "dependencies": { "printf"    : ">=0.0.4"
-                  , "underscore": ">=1.3.3" }
-, "devDependencies": {}
+, "scripts"     : { "test" : "mocha -R spec -s 1" }
+, "dependencies": { "printf": ">=0.1.1"
+                  , "lodash": ">=1.1.1" }
+, "devDependencies": {"mocha" : "*"}
 , "engines" : {"node" : ">= 0.4.0"}
 }
