updated name and description

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name"        : "stats"
+  "name"        : "stats-api"
 , "main"        : "lib/stats.js"
 , "version"     : "1.0.0"
-, "description" : "A module for collecting internal statistics"
+, "description" : "A module for collecting internal application/library performance statistics"
 , "keywords"    : ["performance", "stats", "statistics", "monitor"
                   , "monitoring"]
 , "homepage"    : "https://github.com/lleo/node-stats"
